--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fs": "0.0.1-security",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
+    "tsc": "^1.20150623.0",
     "utf8": "^3.0.0"
   }
 }
