--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "tts.js",
   "scripts": {
     "test": "tsc tts.ts && node tts.js",
-    "build": "tsc tts.ts"
+    "install": "tsc tts.ts"
   },
   "repository": {
     "type": "git",
@@ -16,15 +16,17 @@
   },
   "author": "Joshua Pedrick",
   "license": "ISC",
+  "devDependencies" : {
+  },
   "dependencies": {
     "@types/node": "^12.7.5",
     "@types/request-promise-native": "^1.0.16",
     "@types/utf8": "^2.1.6",
     "file-system": "^2.2.2",
+    "tsc": "^1.20150623.0",
     "fs": "0.0.1-security",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
-    "tsc": "^1.20150623.0",
     "utf8": "^3.0.0"
   }
 }
